; ModuleID = '/home/carl/AnghaBench/git/extr_sha1-file.c_for_each_loose_object.c'
source_filename = "/home/carl/AnghaBench/git/extr_sha1-file.c_for_each_loose_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.object_directory* }
%struct.object_directory = type { i32, %struct.object_directory* }

@the_repository = common dso_local global %struct.TYPE_5__* null, align 8
@FOR_EACH_OBJECT_LOCAL_ONLY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @for_each_loose_object(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.object_directory*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** @the_repository, align 8
  %11 = call i32 @prepare_alt_odb(%struct.TYPE_5__* %10)
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** @the_repository, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load %struct.object_directory*, %struct.object_directory** %15, align 8
  store %struct.object_directory* %16, %struct.object_directory** %8, align 8
  br label %17

17:                                               ; preds = %38, %3
  %18 = load %struct.object_directory*, %struct.object_directory** %8, align 8
  %19 = icmp ne %struct.object_directory* %18, null
  br i1 %19, label %20, label %42

20:                                               ; preds = %17
  %21 = load %struct.object_directory*, %struct.object_directory** %8, align 8
  %22 = getelementptr inbounds %struct.object_directory, %struct.object_directory* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = load i32, i32* %5, align 4
  %25 = load i8*, i8** %6, align 8
  %26 = call i32 @for_each_loose_file_in_objdir(i32 %23, i32 %24, i32* null, i32* null, i8* %25)
  store i32 %26, i32* %9, align 4
  %27 = load i32, i32* %9, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %20
  %30 = load i32, i32* %9, align 4
  store i32 %30, i32* %4, align 4
  br label %43

31:                                               ; preds = %20
  %32 = load i32, i32* %7, align 4
  %33 = load i32, i32* @FOR_EACH_OBJECT_LOCAL_ONLY, align 4
  %34 = and i32 %32, %33
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %31
  br label %42

37:                                               ; preds = %31
  br label %38

38:                                               ; preds = %37
  %39 = load %struct.object_directory*, %struct.object_directory** %8, align 8
  %40 = getelementptr inbounds %struct.object_directory, %struct.object_directory* %39, i32 0, i32 1
  %41 = load %struct.object_directory*, %struct.object_directory** %40, align 8
  store %struct.object_directory* %41, %struct.object_directory** %8, align 8
  br label %17

42:                                               ; preds = %36, %17
  store i32 0, i32* %4, align 4
  br label %43

43:                                               ; preds = %42, %29
  %44 = load i32, i32* %4, align 4
  ret i32 %44
}

declare dso_local i32 @prepare_alt_odb(%struct.TYPE_5__*) #1

declare dso_local i32 @for_each_loose_file_in_objdir(i32, i32, i32*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
